// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapControls Snapshot should match snapshot when loading 1`] = `
[
  <TouchableOpacity
    onPress={[MockFunction]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 24,
        "bottom": 100,
        "height": 48,
        "justifyContent": "center",
        "position": "absolute",
        "right": 20,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 10,
        "width": 48,
      }
    }
  >
    <Text
      testID="icon-locate"
    >
      locate
      -
      24
      -
      #222222
    </Text>
  </TouchableOpacity>,
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 0.9)",
        "borderRadius": 12,
        "left": "50%",
        "padding": 20,
        "position": "absolute",
        "top": "50%",
        "transform": [
          {
            "translateX": -50,
          },
          {
            "translateY": -50,
          },
        ],
      }
    }
  >
    <ActivityIndicator
      color="#222222"
      size="large"
    />
    <Text
      style={
        {
          "color": "#717171",
          "fontSize": 14,
          "marginTop": 8,
        }
      }
    >
      Finding nearby contractors...
    </Text>
  </View>,
]
`;

exports[`MapControls Snapshot should match snapshot when not loading 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 24,
      "bottom": 100,
      "height": 48,
      "justifyContent": "center",
      "position": "absolute",
      "right": 20,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 10,
      "width": 48,
    }
  }
>
  <Text
    testID="icon-locate"
  >
    locate
    -
    24
    -
    #222222
  </Text>
</TouchableOpacity>
`;
